@@ -137,6 +137,7 @@
     * 4097 FIX: Event console: Make writing of status file more robust...
     * 4147 FIX: Always show rule analyser result on Generate, not only after previous Try out...
     * 4149 FIX: Fix notifications from Event Console if host has more than one contact...
+    * 4152 FIX: Fix matching of hosts when forwarding notifications from Event Console...
 
     Livestatus:
     * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....
